--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha test/**/*.test.js --exit"
+    "test": "mocha test/**/*.test.js --exit",
+    "seed": "node seeder.js",           
+    "seed:destroy": "node seeder.js -d"
   },
   "keywords": [
     "ecommerce",
