--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha test/**/*.test.js --exit",
+    "test": "mocha test/**/*.test.js --exit --timeout 10000",
     "seed": "node seeder.js",
     "seed:destroy": "node seeder.js -d"
   },
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "color": "^5.0.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
